# shikimori-ml

./: .env  .gitignore  README.md  example.py  pyproject.toml
shikimori/: __init__.py  graphql_client.py  logger.py
shikimori/graphql/: graphql_client.py
shikimori/parse/: parse.py  query.txt
